[gd_scene load_steps=14 format=3 uid="uid://7bmrbudeq40y"]

[ext_resource type="Script" uid="uid://cw48aw6pubuwl" path="res://scenes/level_select.gd" id="1_p0wlc"]
[ext_resource type="Texture2D" uid="uid://7fjc1etvog52" path="res://scenes/level_0/sample.png" id="2_2epne"]
[ext_resource type="Texture2D" uid="uid://cr2mxxoiwbrta" path="res://scenes/level_6/preview.png" id="3_2epne"]
[ext_resource type="Texture2D" uid="uid://b2aj55v7b6d6g" path="res://scenes/level_1/preview.png" id="3_o2xx4"]
[ext_resource type="Texture2D" uid="uid://t5iy8syqok2g" path="res://scenes/level_2/preview.png" id="3_rif6e"]
[ext_resource type="Texture2D" uid="uid://dgr47oep1n57i" path="res://scenes/level_3/preview.png" id="5_htctk"]
[ext_resource type="Texture2D" uid="uid://bplgsd6p75top" path="res://scenes/level_4/preview.png" id="6_htctk"]
[ext_resource type="Texture2D" uid="uid://m8twggk6t78x" path="res://scenes/level_5/preview.png" id="6_s6tf7"]
[ext_resource type="Texture2D" uid="uid://cwekv3qhsrb64" path="res://scenes/level_7/preview.png" id="9_rovvv"]
[ext_resource type="Texture2D" uid="uid://djy2ysommtucl" path="res://scenes/level_8/preview.png" id="10_0wyvj"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_64kqf"]
size = Vector2(480, 320)

[sub_resource type="LabelSettings" id="LabelSettings_64kqf"]
font_size = 24
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p0wlc"]
font_size = 32

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0wlc")

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -240.0
offset_right = 360.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -160.0
offset_right = 213.0
offset_bottom = 160.0
grow_vertical = 2

[node name="Level0" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Beta (QA World)"

[node name="Level1" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Animal Crossing: New Leaf"

[node name="Level2" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Guild Wars"

[node name="Level3" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Minecraft"

[node name="Level4" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
text = "Pok√©mon Legends: Z-A"

[node name="Level5" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Portal"

[node name="Level6" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Super Mario Galaxy"

[node name="Level7" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Zelda: Breath of the Wild"

[node name="Level8" type="Button" parent="Center/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Zelda: Link's Awakening"

[node name="CenterContainer" type="CenterContainer" parent="Center"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -160.0
offset_bottom = 160.0
grow_horizontal = 0
grow_vertical = 2

[node name="Placeholder" type="TextureRect" parent="Center/CenterContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_64kqf")

[node name="Level0" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("2_2epne")
stretch_mode = 5

[node name="Level1" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_o2xx4")

[node name="Level2" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_rif6e")

[node name="Level3" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("5_htctk")

[node name="Level4" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_htctk")

[node name="Level5" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("6_s6tf7")

[node name="Level6" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_2epne")

[node name="Level7" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("9_rovvv")

[node name="Level8" type="TextureRect" parent="Center/CenterContainer"]
visible = false
layout_mode = 2
texture = ExtResource("10_0wyvj")

[node name="LevelSelect" type="Label" parent="Center"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -106.5
offset_right = 106.5
offset_bottom = 23.0
grow_horizontal = 2
text = "LEVEL SELECT"
label_settings = SubResource("LabelSettings_64kqf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Center"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -79.0
offset_right = 247.0
grow_horizontal = 2
grow_vertical = 0
autowrap_mode = 2

[node name="EnterLevel" type="Button" parent="Center"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Enter Level"

[node name="Exit" type="Button" parent="Center"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -27.0
offset_bottom = 31.0
grow_horizontal = 0
text = " X "

[node name="Loading" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -1080.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1920, 1080)
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Loading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
label_settings = SubResource("LabelSettings_p0wlc")

[connection signal="pressed" from="Center/VBoxContainer/Level0" to="." method="_on_level0_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level2" to="." method="_on_level2_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level4" to="." method="_on_level4_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level5" to="." method="_on_level5_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level6" to="." method="_on_level6_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level7" to="." method="_on_level7_pressed"]
[connection signal="pressed" from="Center/VBoxContainer/Level8" to="." method="_on_level8_pressed"]
[connection signal="pressed" from="Center/EnterLevel" to="." method="_on_enter_level_pressed"]
[connection signal="pressed" from="Center/Exit" to="." method="_on_exit_pressed"]
